# IoTSentinel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mosquitto.conf  pyproject.toml  requirements.txt
docs/: architecture.md  owasp-mapping.md  threat-model.md
src/: __main__.py
src/alerts/: alert_manager.py
src/analysis/: __init__.py  anomaly_detector.py  behavior_profiler.py
src/attacks/: attack_simulator.py
src/cli/: main.py
src/config/: settings.py  tls_config.py
src/devices/: base_device.py  camera.py  lock.py  sensor.py
src/monitor/: traffic_monitor.py
src/rules/: engine.py
src/rules/policies/: behavioral_checks.py  owasp_checks.py  protocol_checks.py
src/transport/: mqtt_client.py
tests/: test_anomaly_detector.py  test_attack_simulator.py  test_mqtt_client.py  test_rule_engine.py  test_traffic_monitor.py
